<resources>
    <string name="app_name">Bloopy Works</string>
    <string name="app_dec">Make a Perfect Payment\nSystem For Your Company</string>
    <string name="app_small_desc">Help to Calculate All Your Employee\nSalary and Bonus</string>
    <string name="get_started">Get Started</string>
    <string name="cont">Continue</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_desc">Create Your Account</string>
    <string name="terms">By Registering You Agree With Our</string>
    <string name="btn_terms"><u>Terms and Service</u></string>
    <string name="regis">Register</string>
    <string name="haveAcc">Already have an account?</string>
    <string name="login"><u>Login</u></string>
    <string name="verif">Verification Email</string>
    <string name="verif_desc">Please enter the code that we send to your email</string>
    <string name="example_email">email@gmail.com</string>
    <string name="resend_code">Doesn\'t get the code?</string>
    <string name="resend"><u>Resend</u></string>
    <string name="btn_login">Login</string>
    <string name="cograts">Congratulations!</string>
    <string name="cograts_desc">Your account is complete and enjoy\nthe easier way for you payment\nsystem</string>
    <string name="welcomeBack">Welcome Back</string>
    <string name="loginAccount">Login Into Your Account</string>
    <string name="forgotPass"><u>Forgot Password</u></string>
    <string name="forgotPassActivity">Forgot Password</string>
    <string name="dontHaveAcc">Doesn\'t have an account?</string>
    <string name="btn_signUp"><u>Sign Up</u></string>
    <string name="cograts_login">You have successfully\nresetting your password</string>
    <string name="apps_name">Bloopy Works</string>
    <string name="employee_name">Employee Name</string>
    <string name="employee_position">Employee Position</string>
    <string name="attendance">Attendance</string>
    <string name="early">Go Home Early</string>
    <string name="overtime">Overtime</string>
    <string name="loc">Live Location</string>
    <string name="off">Time Off</string>
    <string name="pay_slip">My Payslip</string>
    <string name="req">Request</string>
    <string name="card_early">Early</string>
    <string name="time">0 Hours</string>
    <string name="announcement">Announcement</string>
    <string name="all">View All</string>
    <string name="descAnnouncement">Announcement\nin Here</string>
    <string name="dateAnnouncement">Date in Here</string>
    <string name="date">May 2022</string>
    <string name="req_attendace">Request Attendance</string>
    <string name="example_date_detail">1 May 2022</string>
    <string name="example_clock_in">08.55</string>
    <string name="example_clock_out">17.02</string>
    <string name="date_detail">Input Date</string>
    <string name="clock_in">Clock In</string>
    <string name="clock_out">Clock Out</string>
    <string name="req_overtime">Request Overtime</string>
    <string name="overtime_detail">Overtime that has been Taken</string>
    <string name="req_early">Request Go Home Early</string>
    <string name="early_detail">Go Home Early that has been Taken</string>
    <string name="little_date">Date</string>
    <string name="choose_date">Choose Date</string>
    <string name="in_schedule">Schedule In\n09.00</string>
    <string name="out_schedule">Schedule Out\n17.00</string>
    <string name="overtime_hours">Overtime Hours</string>
    <string name="hours">Hours</string>
    <string name="minute">Minute</string>
    <string name="break_before_overtime">Break Before Overtime</string>
    <string name="compensation_type">Compensation Type</string>
    <string name="paid_overtime">Paid for overtime in accordance to my overtime hours.</string>
    <string name="desc">Description</string>
    <string name="overtime_reason">Enter the reason for requesting overtime</string>
    <string name="cancel">Cancel</string>
    <string name="reason">Reason</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>