<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginAndSignUp"
    android:orientation="vertical"
    android:layout_gravity="center_vertical">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="336dp"
        android:layout_height="132dp"
        android:layout_marginTop="60dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/logo_dark_remove_bg" />

    <ImageView
        android:id="@+id/creditImage"
        android:layout_width="290dp"
        android:layout_height="216dp"
        android:layout_marginTop="43dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/ic_undraw_credit_card_payment_re_o911" />

    <TextView
        android:id="@+id/appDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/app_dec"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/appSmallDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="14dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/app_small_desc"
        android:textAlignment="center"
        android:textColor="@color/black_desc"
        android:textSize="13sp"/>

    <Button
        android:id="@+id/btn_getStartedSignUp"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:background="@drawable/btn_light_small"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/get_started"
        android:textColor="@color/blue"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_continue"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="17dp"
        android:layout_marginBottom="77dp"
        android:background="@drawable/btn_blue_small"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/cont"
        android:textColor="@color/white"
        android:textSize="20sp" />

</LinearLayout>