<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GetStarted"
    android:orientation="vertical"
    android:layout_gravity="center">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="336dp"
        android:layout_height="132dp"
        android:layout_marginTop="56dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/logo_dark_remove_bg" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="380dp"
        android:layout_height="310dp"
        android:layout_marginTop="42dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/ic_undraw_well_done" />

    <TextView
        android:id="@+id/cograts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="33dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/cograts"
        android:textColor="@color/black"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/descCograts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/cograts_desc"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="13sp"/>

    <Button
        android:id="@+id/btn_getStarted"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="35dp"
        android:background="@drawable/btn_blue_small"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/get_started"
        android:textColor="@color/white"
        android:textSize="20sp"/>

</LinearLayout>