<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangePass"
    android:orientation="vertical"
    android:gravity="center_vertical">

    <ImageView
        android:id="@+id/logo4"
        android:layout_width="336dp"
        android:layout_height="132dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="38dp"
        app:srcCompat="@drawable/logo_dark_remove_bg" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="380dp"
        android:layout_height="310dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="42dp"
        app:srcCompat="@drawable/ic_undraw_well_done" />

    <TextView
        android:id="@+id/cograts2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="33dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/cograts"
        android:textColor="@color/black"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/descCograts2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="127dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/cograts_login"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="13sp"/>

    <Button
        android:id="@+id/btn_LoginChangePass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="86dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/btn_blue_small"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/btn_login"
        android:textColor="@color/white"
        android:textSize="20sp" />

</LinearLayout>