<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/search_card_view"
    android:layout_marginTop="2dp">

    <LinearLayout
        android:id="@+id/search_card_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="5dp">

        <TextView
            android:id="@+id/tv_input_date1"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/example_date_detail"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_gravity="center_vertical"/>

        <TextView
            android:id="@+id/tv_clockIn_time_1"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/example_clock_in"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_gravity="center_vertical"
            android:gravity="center"/>

        <TextView
            android:id="@+id/tv_clockOut_time_1"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/example_clock_out"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_gravity="center_vertical"
            android:gravity="center"/>

        <ImageButton
            android:id="@+id/btn_plus_attendance"
            android:layout_width="29dp"
            android:layout_height="27dp"
            android:layout_marginStart="30dp"
            android:background="@drawable/btn_transparent"
            app:srcCompat="@drawable/ic_bi_plus_square_fill"
            app:tint="@android:color/darker_gray"
            android:layout_gravity="center_vertical"
            android:gravity="center"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>