<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:orientation="vertical">

    <ImageButton
        android:id="@+id/btn_backArrow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/btn_back"
        app:srcCompat="@drawable/ic_back_arrow"
        app:tint="#000000" />

    <ImageView
        android:id="@+id/logo3"
        android:layout_width="318dp"
        android:layout_height="118dp"
        android:layout_gravity="center"
        android:layout_marginTop="27dp"
        app:srcCompat="@drawable/logo_dark_remove_bg" />

    <TextView
        android:id="@+id/welcomeBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginTop="75dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/welcomeBack"
        android:textColor="@color/black"
        android:textSize="25sp"/>

    <TextView
        android:id="@+id/login_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginTop="11dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/loginAccount"
        android:textColor="@color/black_desc"
        android:textSize="16sp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/email3"
            android:layout_width="45dp"
            android:layout_height="47dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="43dp"
            app:srcCompat="@drawable/ic_email"
            app:tint="@color/black" />

        <EditText
            android:id="@+id/inputEmailLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="43dp"
            android:layout_toEndOf="@+id/email3"
            android:background="@drawable/input"
            android:ems="10"
            android:fontFamily="@font/montserrat_medium"
            android:hint="Enter your email"
            android:inputType="textEmailAddress"
            android:paddingLeft="15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/hint"
            android:textSize="12sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/pass3"
            android:layout_width="45dp"
            android:layout_height="47dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="13dp"
            app:srcCompat="@drawable/ic_key"
            app:tint="@color/black" />

        <EditText
            android:id="@+id/inputPassLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="13dp"
            android:background="@drawable/input"
            android:ems="10"
            android:fontFamily="@font/montserrat_medium"
            android:hint="Enter your password"
            android:inputType="textPassword"
            android:paddingLeft="15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/hint"
            android:textSize="12sp"
            android:layout_toEndOf="@+id/pass3"/>

    </RelativeLayout>

    <Button
        android:id="@+id/btn_forgotPass"
        android:layout_width="130dp"
        android:layout_height="27dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_transparent"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/forgotPass"
        android:textAllCaps="false"
        android:textColor="@color/blue_text"
        android:textSize="15sp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_Login_Login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="86dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/btn_light_small"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/btn_login"
            android:textColor="@color/blue"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/doesntHaveAcc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="95dp"
            android:layout_marginTop="9dp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/dontHaveAcc"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:layout_below="@+id/btn_Login_Login"/>

        <Button
            android:id="@+id/btn_SignUp_Login"
            android:layout_width="56dp"
            android:layout_height="17dp"
            android:layout_below="@+id/btn_Login_Login"
            android:layout_marginStart="2dp"
            android:layout_marginTop="7dp"
            android:layout_toEndOf="@+id/doesntHaveAcc"
            android:background="@drawable/btn_transparent"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/btn_signUp"
            android:textAllCaps="false"
            android:textColor="@color/blue_text"
            android:textSize="13sp" />

    </RelativeLayout>

</LinearLayout>