<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp"
    android:orientation="vertical">

    <ImageButton
        android:id="@+id/btn_backArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/btn_back"
        app:srcCompat="@drawable/ic_back_arrow"
        app:tint="#000000" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="318dp"
        android:layout_height="118dp"
        android:layout_gravity="center"
        android:layout_marginTop="27dp"
        app:srcCompat="@drawable/logo_dark_remove_bg" />

    <TextView
        android:id="@+id/signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginTop="75dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/sign_up"
        android:textColor="@color/black"
        android:textSize="25sp"/>

    <TextView
        android:id="@+id/signUp_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginTop="11dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/sign_up_desc"
        android:textColor="@color/black_desc"
        android:textSize="16sp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/user"
            android:layout_width="45dp"
            android:layout_height="47dp"
            android:layout_marginStart="33dp"
            android:layout_marginTop="43dp"
            app:srcCompat="@drawable/ic_person"
            app:tint="@color/black" />

        <EditText
            android:id="@+id/inputUser"
            android:layout_width="261dp"
            android:layout_height="47dp"
            android:layout_marginStart="19dp"
            android:layout_marginTop="43dp"
            android:layout_toEndOf="@+id/user"
            android:background="@drawable/input"
            android:ems="10"
            android:fontFamily="@font/montserrat_medium"
            android:hint="Enter your name"
            android:inputType="textPersonName"
            android:paddingLeft="15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/hint"
            android:textSize="12sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/email"
            android:layout_width="45dp"
            android:layout_height="47dp"
            android:layout_marginStart="33dp"
            android:layout_marginTop="13dp"
            app:srcCompat="@drawable/ic_email"
            app:tint="@color/black" />

        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="13dp"
            android:background="@drawable/input"
            android:ems="10"
            android:fontFamily="@font/montserrat_medium"
            android:hint="Enter your email"
            android:inputType="textEmailAddress"
            android:paddingLeft="15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/hint"
            android:textSize="12sp"
            android:layout_toEndOf="@+id/email"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/pass"
            android:layout_width="45dp"
            android:layout_height="47dp"
            android:layout_marginStart="33dp"
            android:layout_marginTop="13dp"
            app:srcCompat="@drawable/ic_key"
            app:tint="@color/black" />

        <EditText
            android:id="@+id/inputPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="13dp"
            android:background="@drawable/input"
            android:ems="10"
            android:fontFamily="@font/montserrat_medium"
            android:hint="Enter your password"
            android:inputType="textPassword"
            android:paddingLeft="15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/hint"
            android:textSize="12sp"
            android:layout_toEndOf="@id/pass"/>

        <EditText
            android:id="@+id/confirmPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="97dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/input"
            android:ems="10"
            android:fontFamily="@font/montserrat_medium"
            android:hint="Confirm your password"
            android:inputType="textPassword"
            android:paddingLeft="15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/hint"
            android:textSize="12sp"
            android:layout_below="@+id/inputPass"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/accTerms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/terms"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/btn_terms"
        android:layout_width="132dp"
        android:layout_height="21dp"
        android:layout_marginTop="1dp"
        android:background="@drawable/btn_transparent"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/btn_terms"
        android:textAllCaps="false"
        android:textColor="@color/blue_text"
        android:textSize="12sp"
        android:layout_gravity="center"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_regis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="86dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/btn_light_small"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/regis"
            android:textColor="@color/blue"
            android:textSize="20sp"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/haveAcc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="97dp"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="100dp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/haveAcc"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:layout_below="@+id/btn_regis"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="39dp"
            android:layout_height="18dp"
            android:layout_below="@+id/btn_regis"
            android:layout_marginStart="2dp"
            android:layout_marginTop="4dp"
            android:layout_toEndOf="@+id/haveAcc"
            android:background="@drawable/btn_transparent"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/blue_text"
            android:textSize="13sp" />

    </RelativeLayout>

</LinearLayout>