<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AttendanceActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/red_bg">

            <ImageButton
                android:id="@+id/btn_backArrow4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="29dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn_transparent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_back_arrow"
                app:tint="#FFFFFF" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="91dp"
                android:layout_marginTop="9dp"
                android:fontFamily="@font/montserrat_semi_bold"
                android:text="@string/attendance"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@+id/btn_backArrow4"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/btn_month_dropdown"
            style="?android:spinnerStyle"
            android:layout_width="351dp"
            android:layout_height="58dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="20dp"
            android:background="@drawable/btn_transparent"
            android:drawableStart="@drawable/ic_uit_calender_gray"
            android:drawableEnd="@drawable/ic_dropdown"
            android:drawablePadding="10dp"
            android:fontFamily="@font/montserrat_medium"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/date"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_req_attendance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginBottom="35dp"
            android:background="@drawable/btn_blue_small"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/req_attendace"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="17sp" />
        
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/attendanceRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="700dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"/>

    </LinearLayout>

</ScrollView>